# burguer

./: .env_sample  Dockerfile  README.md  app.py  devcontainer.session.sql  diana.py  docker-compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: dev.env  devcontainer.json  docker-compose.yml  startup.sh
infrastructure/repository/: burger_repository.py
infrastructure/service/: db.py
models/: __init__.py  mysql.py  python.py
public/css/: carrinho.css  diy.css  layout.css  main.css  style.css
public/js/: main.js  script.js
seeds/: seed.py
template/: carrinho.html  diy.html  index.html  jinja_carrinho.html  jinja_diy.html  jinja_main.html  layout.html
template/old/: carrinho.html  index.html  script.js
tests/: __init__.py  burguers_test.py  calculate_test.py  ingredients_test.py
tests/utils/: client.py  stubs.py
