[tool.poetry]
name = "burguer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
pytest-stub = "^1.1.0"
PyMySQL = "^1.1.1"
peewee = "^3.17.6"
python-dotenv = "^1.0.1"
cryptography = "^43.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
